examples/test/testpolicy16925.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16925
  namespace: namespace244
spec:
  podSelector:
    matchLabels:
      key5: value27
      key32: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value25
          key37: value20
          key15: value24
      podSelector:
        matchLabels:
          key31: value41
          key6: value6
